document-cache/testnet/doccache-go.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docache-go
  namespace: document-cache
spec:
  selector:
    matchLabels:
      app: docache-go
  replicas: 1
  template:
    metadata:
      labels:
        app: docache-go
    spec:
      containers:
      - name: docache-go
        image: sebastianmontero/hypha-doc-cache-go-testnet:7b55198015077484169707f5f36fb58b0a60f269
        imagePullPolicy: IfNotPresent
        command: ["/usr/local/go/bin/go"]
        args: ["run", "."]
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
