document-cache/testnet/doccache-go-testnet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doccache-go-testnet
  namespace: document-cache
  labels:
    app: doccache
    env: telos-testnet
spec:
  selector:
    matchLabels:
      app: doccache
      env: telos-testnet
  replicas: 1
  template:
    metadata:
      labels:
        app: doccache
        env: telos-testnet
    spec:
      containers:
      - name: docache-go
        image: sebastianmontero/hypha-doc-cache-go-testnet:66915bfb314067f2cbd35446b4f31db1bdb7dbec
        imagePullPolicy: IfNotPresent
        command: ["/usr/local/go/bin/go"]
        args: ["run", "."]
        ports:
         - containerPort: 2114
           name: prometheus
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: doccache-go-testnet
  namespace: document-cache
  labels:
    app: doccache
    env: telos-testnet
spec:
  selector:
    app: doccache
    env: telos-testnet
  type: ClusterIP
  ports:
  - port: 2114
    targetPort: 2114
    protocol: TCP
