document-cache/testnet/dgraph-testnet.yaml
apiVersion: v1
kind: Service
metadata:
  name: dgraph-testnet
  namespace: document-cache
  labels:
    app: dgraph
    env: telos-testnet
spec:
  type: ClusterIP
  ports:
  - port: 5080
    targetPort: 5080
    name: grpc-zero
  - port: 6080
    targetPort: 6080
    name: http-zero
  - port: 8080
    targetPort: 8080
    name: http-alpha
  - port: 9080
    targetPort: 9080
    name: grpc-alpha
  - port: 8000
    targetPort: 8000
    name: http-ratel
  selector:
    app: dgraph
    env: telos-testnet
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dgraph-testnet
  namespace: document-cache
  labels:
    app: dgraph
    env: telos-testnet
spec:
  serviceName: dgraph-testnet
  replicas: 1
  selector:
      matchLabels:
        app: dgraph
        env: telos-testnet
  template:
    metadata:
      labels:
        app: dgraph
        env: telos-testnet
    spec:
      containers:
      - name: ratel
        image: dgraph/dgraph:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
          name: http-ratel
        command:
          - dgraph-ratel
      - name: zero
        image: dgraph/dgraph:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5080
          name: grpc-zero
        - containerPort: 6080
          name: http-zero
        volumeMounts:
        - name: dgraph-testnet-pvc
          mountPath: /dgraph
        command:
          - bash
          - "-c"
          - |
            set -ex
            dgraph zero --my=$(hostname -f):5080
      - name: alpha
        image: dgraph/dgraph:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http-alpha
        - containerPort: 9080
          name: grpc-alpha
        volumeMounts:
        - name: dgraph-testnet-pvc
          mountPath: /dgraph
        command:
          - bash
          - "-c"
          - |
            set -ex
            dgraph alpha --whitelist 10.0.0.0/8 --my=$(hostname -f):7080 --zero dgraph-testnet:5080
      terminationGracePeriodSeconds: 60
      volumes:
      - name: dgraph-testnet-pvc
        persistentVolumeClaim:
          claimName: dgraph-testnet-pvc
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
  - metadata:
      name: dgraph-testnet-pvc
      annotations:
        volume.alpha.kubernetes.io/storage-class: anything
    spec:
      accessModes:
        - "ReadWriteOnce"
      resources:
        requests:
          storage: 20Gi
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dgraph-ingress-alpha-testnet
  namespace: document-cache
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - alpha-test.tekit.io
    secretName: dgraph-alpha-testnet-tekit-com-tls
  rules:
  - host: alpha-test.tekit.io
    http:
      paths:
      - backend:
          serviceName: dgraph-testnet
          servicePort: 8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dgraph-ingress-ratel-testnet
  namespace: document-cache
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - ratel-test.tekit.io
    secretName: dgraph-ratel-testnet-tekit-com-tls
  rules:
  - host: ratel-test.tekit.io
    http:
      paths:
      - backend:
          serviceName: dgraph-testnet
          servicePort: 8000
